Update column styles to prevent auto column collapse  #177643257500661

--- a/public/sources/elements/column/public/src/styles.less
+++ b/public/sources/elements/column/public/src/styles.less
@@ -2,22 +2,19 @@
   flex: 0 0 100%;
   max-width: 100%;
   box-sizing: border-box;
+  display: flex;
 }
 
 .vce-col-content {
+  flex: 1 1 0;
+  max-width: 100%;
+  width: 0;
   min-height: 1em;
   padding-left: @gutter / 2;
   padding-right: @gutter / 2;
-  &::before,
-  &::after {
-    content: " ";
-    display: table;
-    width: 0;
-    height: 0;
-  }
-  &::after {
-    clear: both;
-  }
+  display: flex;
+  flex-flow: column nowrap;
+  word-break: break-word;
 }
 
 .vce-col-direction--rtl {
